welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:1: error: not found: type int
def estAdo(a:int):Boolean = {
             ^